[package]
authors       = ["lxl66566 <lxl66566@gmail.com>"]
categories    = ["command-line-utilities", "development-tools"]
description   = "A fast, feature-rich, file-oriented batch URL decoder written in Rust."
documentation = "https://github.com/lxl66566/urldecoder"
edition       = "2024"
homepage      = "https://github.com/lxl66566/urldecoder"
keywords      = ["url", "decode"]
license       = "MIT"
name          = "urldecoder"
readme        = "README.md"
repository    = "https://github.com/lxl66566/urldecoder"
rust-version  = "1.85.1"
version       = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap     = { version = "4.5", features = ["derive"] }
colored  = { version = "3", optional = true }
glob     = { version = "0.3", optional = true }
memchr   = "2"
rayon    = { version = "1", optional = true }
snafu    = "0.8"
tempfile = "3.8"

[dev-dependencies]
criterion = "0.8.1"

[features]
bin         = ["rayon", "glob"]
color       = ["colored"]
default     = ["verbose-log"]
verbose-log = []

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true

[lib]
name = "urldecoder"
path = "src/lib.rs"

[[bin]]
name              = "urldecoder"
path              = "src/main.rs"
required-features = ["bin"]

[[bench]]
harness = false
name    = "single_thread"

[[bench]]
features = ["bin"]
harness  = false
name     = "multi_files"
