# [workspace]
# members = ["fuzz"]

[package]
authors       = ["lxl66566 <lxl66566@gmail.com>"]
categories    = ["command-line-utilities", "development-tools"]
description   = "High performance URL batch decoder"
documentation = "https://github.com/lxl66566/urldecoder"
edition       = "2024"
homepage      = "https://github.com/lxl66566/urldecoder"
keywords      = ["url", "decode"]
license       = "MIT"
name          = "urldecoder"
readme        = "README.md"
repository    = "https://github.com/lxl66566/urldecoder"
rust-version  = "1.85.1"
version       = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap     = { version = "4.5", features = ["derive"], optional = true }
glob     = { version = "0.3", optional = true }
memchr   = "2.8.0"
memmap2  = "0.9.10"
rayon    = { version = "1", optional = true }
simdutf8 = "0.1.5"
snafu    = "0.9"
tempfile = "3.8"

[dev-dependencies]
criterion = "0.8.1"

[features]
# compile binary, allows to decode folder
bin = ["rayon", "glob", "clap"]
# verbose log (output diff)
verbose-log = []
# if decoded url is not valid utf-8, do not decode
safe = []
# default features
default = ["safe"]

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true

[lib]
name = "urldecoder"
path = "src/lib.rs"

[[bin]]
name              = "urldecoder"
path              = "src/main.rs"
required-features = ["bin"]

[[bench]]
harness = false
name    = "single_thread"

[[bench]]
harness = false
name    = "single_file"

[[bench]]
harness           = false
name              = "multi_files"
required-features = ["bin"]
