[package]
edition = "2024"
name    = "urldecoder-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
regex         = "1.12.2"
urlencoding   = "2.1.3"

[dependencies.urldecoder]
path = ".."

[[bin]]
bench = false
doc   = false
name  = "fuzz_target_1"
path  = "fuzz_targets/fuzz_target_1.rs"
test  = false
