[package]
edition = "2024"
name    = "urldecoder-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
regex         = "1.12.2"
urlencoding   = "2.1.3"

[dependencies.urldecoder]
default-features = false
path             = ".."

[features]
safe = ["urldecoder/safe"]

[[bin]]
bench             = false
doc               = false
name              = "fuzz_target_safe"
path              = "fuzz_targets/fuzz_target_safe.rs"
required-features = ["safe"]
test              = false

[[bin]]
bench = false
doc   = false
name  = "fuzz_target_unsafe"
path  = "fuzz_targets/fuzz_target_unsafe.rs"
test  = false
