[package]
edition = "2024"
name    = "urldecoder-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
memchr        = "2.8.0"
regex         = "1.12.2"
urlencoding   = "2.1.3"

[dependencies.urldecoder]
default-features = false
path             = ".."

[features]
safe = ["urldecoder/safe"]

# fixes fuzz on windows: rustc-LLVM ERROR: Associative COMDAT symbol '' is not a key for its COMDAT.
[profile.release]
lto = false

[[bin]]
bench             = false
doc               = false
name              = "fuzz_target_safe"
path              = "fuzz_targets/fuzz_target_safe.rs"
required-features = ["safe"]
test              = false

[[bin]]
bench = false
doc   = false
name  = "fuzz_target_unsafe"
path  = "fuzz_targets/fuzz_target_unsafe.rs"
test  = false
